<resources>
    <string name="app_name">RSSI Track</string>

    <string name="sIP">Connected WiFi IP :</string>
    <string name="action_settings">Settings</string>
    <string name="sRSSI">RSSI Level :</string>
    <string name="sSSID">Connected SSID  :</string>
    <string name="sTime">Time :</string>
    <string name="sVolume">Max Volume :</string>
    <string name="sButtonStart">Press to Start Recording</string>
    <string name="sButtonStop">Press to Stop Recording</string>
    <string name="sButtonQuit">Quit</string>


</resources>
