<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!--android:id="@+id/">-->

    <TextView
        android:id="@+id/Connected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sIP"
        />
    <TextView
        android:id="@+id/IP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sSSID"
        />
    <TextView
        android:id="@+id/SSID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sRSSI"
        />
    <TextView
        android:id="@+id/RSSI"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sTime"
        />
    <TextView
        android:id="@+id/Time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sButtonStart"
        android:id="@+id/btnStart"
        android:layout_gravity="center_horizontal" />

    <Button
        android:keepScreenOn="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sButtonStop"
        android:id="@+id/btnStop"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
